apps/heimdall/heimdall-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
        - name: heimdall
          image: localhost:32000/heimdall
          ports:
            - containerPort: 80
          volumeMounts:
            - name: heimdall
              subPath: config
              mountPath: /config
      volumes:
        - name: heimdall
          persistentVolumeClaim:
            claimName: heimdall
