apps/heimdall/heimdall-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
spec:
  type: ClusterIP
  selector:
    app: heimdall
  ports:
    - name: heimdall
      port: 80
      targetPort: 80
