apps/heimdall/heimdall-ext-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall-ext
  labels:
    type: external

spec:
  tls:
    - hosts:
        - "{hostname}"
      secretName: babardo.ing.cert
  rules:
    - host: "{hostname}"
      http:
        paths:
          - backend:
              service:
                name: heimdall
                port:
                  number: 80
            path: /
            pathType: Prefix
