apps/heimdall/heimdall-local-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall-local
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    type: local
spec:
  rules:
    - host: heimdall.local
      http:
        paths:
          - backend:
              service:
                name: heimdall
                port:
                  number: 80
            path: /
            pathType: Prefix
